fix: column resizing and text truncation

--- a/package/src/styles.css
+++ b/package/src/styles.css
@@ -11,7 +11,6 @@
   /* for initial rendering */
   grid-template-columns: repeat(var(--num-columns), 1fr);
   gap: var(--row-gap) var(--col-gap);
-  word-break: break-all;
 }
 
 .row {
@@ -19,6 +18,13 @@
   grid: inherit;
   gap: inherit;
   grid-column: 1 / calc(var(--num-columns) + 1);
+  grid-template-columns: subgrid;
+}
+
+.row>[role=cell] {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 grid-header {
